--- a/src/dropdown.css
+++ b/src/dropdown.css
@@ -1,6 +1,16 @@
+:root {
+  --btn-color: #559ff3;
+  --btn-color-hover: #4380c5;
+  --btn-text: #ffffff;
+  --dropdown-background: #f1f1f1;
+  --dropdown-background-hover: #ddd;
+  --dropdown-shadow: #00000033;
+  --dropdown-text: #000000;
+}
+
 .dropbtn {
-  background-color: #04aa6d;
-  color: white;
+  background-color: var(--btn-color);
+  color: var(--btn-text);
   padding: 16px;
   font-size: 16px;
   border: none;
@@ -14,21 +24,21 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: var(--dropdown-background);
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 8px 16px 0px var(--dropdown-shadow);
   z-index: 1;
 }
 
 .dropdown-content a {
-  color: black;
+  color: var(--dropdown-text);
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: var(--dropdown-background-hover);
 }
 
 .dropdown:hover .dropdown-content {
@@ -36,5 +46,5 @@
 }
 
 .dropdown:hover .dropbtn {
-  background-color: #3e8e41;
+  background-color: var(--btn-color-hover);
 }
